# Relasi4warna-main

./: .gitignore  BUILD_NOTES.md  DEPLOYMENT.md  Dockerfile  README.md  backend_test.py  docker-compose.yml  focused_report_test.py  pdf_test.py  pyproject.toml  test_result.md
.emergent/: emergent.yml  summary.txt
.github/workflows/: ci.yml  deploy.yml
apps/api/: README.md  server.py
apps/api/tests/: test_edge_cases.py
apps/web/src/: App.js
apps/web/src/pages/: LandingPage.js  ResultPage.js
backend/: config.py  main.py  requirements.txt  server.py
backend/services/: ai_service.py
backend/tests/: test_comprehensive_e2e.py
backend/utils/: database.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/pages/: AdminPage.js  AuthCallback.js  CheckoutPage.js  DashboardPage.js  LoginPage.js  PricingPage.js  RegisterPage.js  ResultPage.js
infra/docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
memory/: PRD.md
scripts/: test.sh
test_reports/: iteration_1.json  iteration_10.json  iteration_11.json  iteration_12.json  iteration_13.json  iteration_14.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json  iteration_6.json  iteration_7.json  iteration_8.json  iteration_9.json
test_reports/pytest/: pytest_elite_tier_results.xml  pytest_hitl_results.xml  pytest_iteration10_results.xml  pytest_iteration11_results.xml  pytest_iteration14_results.xml  pytest_iteration5_results.xml  pytest_iteration6_results.xml  pytest_iteration7_results.xml  pytest_midtrans_results.xml  pytest_phase4_results.xml  pytest_results.xml
tests/: test_compatibility.py  test_iteration10_features.py  test_midtrans_payment.py  test_phase4_features.py  test_relasi4warna_phase3.py  test_team_challenge_features.py
